<resources>
    <string name="app_name">Where2Meet</string>
    <string name="lbl_register_now">Don\'t have an account? Register</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_username">Username</string>
    <string name="validation_field_required">%s is required</string>
    <string name="lbl_login_now">Already have an account? Login</string>
    <string name="lbl_retype_password">Re-type password</string>
    <string name="lbl_register">Register</string>
    <string name="validation_confirm_password">Password does not match</string>
    <string name="validation_email">Email is not valid</string>
    <string name="msg_register_success">Registered successfully!</string>
    <string name="msg_login_success">Logged in!</string>
    <string name="msg_logout">Logged out!</string>
    <string name="lbl_greeting">Hello, %s</string>
    <string name="validation_password">Password must be minimum 8 characters with uppercase and number</string>
    <string name="validation_username">Username must be alphabet and numeric only</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_greeting_subtitle">Plan your best hangouts here</string>
    <string name="lbl_list_group">Hangout Groups</string>
    <string name="lbl_detail_group">Detail Group</string>
    <string name="lbl_generate">Generate</string>
    <string name="lbl_btn_generate_placeholder">Please ask your group creator\n to generate recommendation</string>
    <string name="lbl_member">Member</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_onboarding_hero">Find your best\nhangout places</string>
    <string name="lbl_onboarding_caption">Find your dream places to hangout\nbased on your and your friends\' preferences!</string>
    <string name="cd_logo">Logo</string>
    <string name="lbl_invite_member">Invite Member</string>
    <string name="lbl_invite_desc">To invite member into your group\nplease use the invitation link below</string>
    <string name="lbl_copy_link">Copy Link</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_pick_mood">What’s your mood\ntoday?</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_select_location">Select Location</string>
    <string name="lbl_detect_location">Detect my current location</string>
    <string name="lbl_pick_location_title">Where are you \nnow?</string>
    <string name="lbl_pick_location_caption">We will use the location on the red marker.\nYou can reposition it or set it to detect your current location</string>
    <string name="lbl_result_caption">Here are the places we recommend for your group,  based on you and your friend’s preference.</string>
    <string name="lbl_open_in_map">Open in Maps</string>
    <string name="lbl_result">Group Result</string>
    <string name="dialog_location_permission_needed_message">This feature needs the location permission, please accept to use location functionality</string>
    <string name="dialog_location_permission_needed_title">Location permission needed</string>
    <string name="dialog_location_permission_rejected_message">To use this feature, please grant the location permission from the settings app</string>
    <string name="dialog_location_permission_rejected_title">Location permission denied</string>
    <string name="err_location_not_found">Location not found</string>
    <string name="err_max_chip_selected">You can only select up to %d chips!</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_pending">Pending</string>
    <string name="msg_moods_selected">Moods selected</string>
    <string name="msg_location_selected">Location selected</string>
    <string name="lbl_group_created_at">Created by %1$s on %2$s</string>
    <string name="lbl_current_mood">Current mood :  %s</string>
    <string name="url_invitation">https://where2meet-backend-wtlln4sbra-et.a.run.app/w2m/invitations/%s</string>
    <string name="lbl_group_generated_at">Generated at %s</string>
    <string name="lbl_accept_invitation">Accept Invitation</string>
    <string name="lbl_invite_confirmation_desc">You have been invited to join a group via invitation link. Do you wish to accept this invitation?</string>
    <string name="lbl_accept">Accept</string>
    <string name="lbl_reject">Reject</string>
    <string name="lbl_retry">Retry</string>
    <string name="hint_list_group_search_view">Search group name</string>
    <string name="lbl_list_group_filter_all">Showing all groups</string>
    <string name="lbl_list_group_filter_by_name">Showing groups with name matching \"%s\"</string>
    <string name="lbl_see_more">Showing up-to 5 of your latest groups\nClick \"See All\" to see all your groups</string>
    <string name="dialog_generate_confirmation_message">After generate, this group will be locked and couldn\'t be edited anymore. Are you sure you want to generate recommendation for this group?</string>
    <string name="dialog_generate_confirmation_title">Confirmation</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_update_group_title">Update Group Name</string>
    <string name="dialog_btn_submit">Submit</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_delete_member_message">Are you sure you want to remove %s from this group?</string>
    <string name="dialog_delete_confirmation_title">Delete Confirmation</string>
    <string name="dialog_delete_group_message">Are you sure you want to delete this group?</string>
</resources>
