<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_chevron_left"
        app:title="@string/lbl_accept_invitation" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbl_invite_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_invite_confirmation_desc"
            android:textAppearance="?textAppearanceBodyMedium"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="12dp"
            android:text="@string/lbl_accept"
            android:textColor="?colorOnSecondary"
            app:backgroundTint="?colorSecondary"
            app:layout_constraintEnd_toStartOf="@id/btn_reject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_invite_desc"
            app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingVertical="12dp"
            android:text="@string/lbl_reject"
            android:textColor="?colorOnError"
            app:backgroundTint="?colorError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_accept"
            app:layout_constraintTop_toBottomOf="@id/lbl_invite_desc"
            app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
