<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.screen.auth.login.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hero"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        app:cardBackgroundColor="?colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_logo"
            android:src="@drawable/logo" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/section_cta"
        app:layout_constraintTop_toBottomOf="@id/hero">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_onboarding_hero"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceHeadlineMedium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_onboarding_caption"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceTitleSmall" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/section_cta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="?colorPrimaryContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?colorSurface"
                app:cardElevation="0dp"
                app:cardForegroundColor="@android:color/transparent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_login"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="?colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="@string/lbl_register"
                    android:textAlignment="center"
                    android:textAppearance="?textAppearanceTitleMedium" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?colorPrimaryContainer"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:layout_constraintLeft_toRightOf="@id/btn_register"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@android:color/transparent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="12dp"
                    android:text="@string/lbl_login"
                    android:textAlignment="center"
                    android:textAppearance="?textAppearanceTitleMedium" />
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
