<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.auth.login.LoginFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/loading_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/hero"
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:layout_marginTop="16dp"
            android:transitionName="hero"
            app:cardBackgroundColor="?colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:transitionName="logo" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            android:paddingHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/hero">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_username"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_username"

                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_email"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/lbl_email"
                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_password"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/lbl_password"
                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_confirm_password"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/lbl_retype_password"
                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:paddingVertical="12dp"
                android:text="@string/lbl_register"
                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/lbl_login_now"
            android:textAppearance="?textAppearanceLabelMedium"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
