<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/detail_group"
        app:navigationIcon="@drawable/ic_chevron_left"
        app:title="@string/lbl_detail_group" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?textAppearanceHeadlineMedium"
                android:textColor="?colorSecondary"
                app:layout_constraintEnd_toStartOf="@id/iv_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Group 1" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_edit_line"
                android:tint="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?textAppearanceBodyMedium"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="Created by Fateen on May 17, 2023" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/lbl_invite_member"
                app:backgroundTint="?colorSecondary"
                app:icon="@drawable/ic_add"
                app:iconGravity="end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_created_at"
                app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:backgroundTint="?colorOutline"
                app:dividerThickness="2dp"
                app:layout_constraintTop_toBottomOf="@id/btn_invite" />

            <TextView
                android:id="@+id/lbl_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_member"
                android:textAppearance="?textAppearanceLabelSmall"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_member"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="12dp"
                app:layout_constraintBottom_toTopOf="@id/section_cta"
                app:layout_constraintTop_toBottomOf="@id/lbl_member"
                tools:listitem="@layout/item_group_member" />

            <FrameLayout
                android:id="@+id/section_cta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_generate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_generate"
                    app:backgroundTint="?colorPrimary"
                    app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent" />

                <TextView
                    android:id="@+id/lbl_generate_disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lbl_btn_generate_placeholder"
                    android:textAppearance="?textAppearanceLabelMedium"
                    tools:visibility="invisible" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
