<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_chevron_left"
        app:title="@string/lbl_invite_member" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbl_invite_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_invite_desc"
            android:textAppearance="?textAppearanceBodyMedium"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_invite_link"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_invite_desc"
            app:shapeAppearanceOverlay="?shapeAppearanceSmallComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_invite_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLines="1"
                android:inputType="text"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAppearance="?textAppearanceLabelMedium"
                tools:text="where2meet.id/invitations/code-here" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/section_cta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="?colorTertiaryContainer"
            app:layout_constraintTop_toBottomOf="@id/tf_invite_link">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_copy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?colorSurface"
                    app:cardElevation="0dp"
                    app:cardForegroundColor="@android:color/transparent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/btn_share"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="?colorTertiary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="12dp"
                        android:text="@string/lbl_copy_link"
                        android:textAlignment="center"
                        android:textAppearance="?textAppearanceTitleMedium" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?colorTertiaryContainer"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:layout_constraintLeft_toRightOf="@id/btn_copy"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="@android:color/transparent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="12dp"
                        android:text="@string/lbl_share"
                        android:textAlignment="center"
                        android:textAppearance="?textAppearanceTitleMedium" />
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
